[package]
name = "drag-and-crop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
reqwest = "0.11.18"
yup-oauth2 = "8.3.0"
serde = { version = "1.0.163", features = ["derive"] }
rocket = { version = "0.5.0-rc.1", features = ["json"]}
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.2"
